tolk-tester/tests/invalid-declaration/err-1193.tolk
fun int.smth(self: int) {
}

/**
@compilation_should_fail
@stderr `self` parameter should not have a type
 */
